Bug 1987777 - Reapply language and timezone overrides only when they exist and add the checks for WindowContext to avoid the crash. r=dom-core,smaug

Differential Revision: https://phabricator.services.mozilla.com/D264378