docshell/base/CanonicalBrowsingContext.cpp
@@ -272,10 +272,14 @@ void CanonicalBrowsingContext::ReplacedBy(
   txn.SetTopInnerSizeForRFP(GetTopInnerSizeForRFP());
   txn.SetIPAddressSpace(GetIPAddressSpace());
 
-  // Reapply language override to update the corresponding realm.
-  txn.SetLanguageOverride(GetLanguageOverride());
-  // Reapply timezone override to update the corresponding realm.
-  txn.SetTimezoneOverride(GetTimezoneOverride());
+  if (!GetLanguageOverride().IsEmpty()) {
+    // Reapply language override to update the corresponding realm.
+    txn.SetLanguageOverride(GetLanguageOverride());
+  }
+  if (!GetTimezoneOverride().IsEmpty()) {
+    // Reapply timezone override to update the corresponding realm.
+    txn.SetTimezoneOverride(GetTimezoneOverride());
+  }
 
   // Propagate some settings on BrowsingContext replacement so they're not lost
   // on bfcached navigations. These are important for GeckoView (see bug
